--- a/spa-saas-mvp-server/.env
+++ b/spa-saas-mvp-server/.env
@@ -1,2 +1,3 @@
 ATLAS_URI=mongodb+srv://lzhlchmxl:lzhlchmxl@cluster0.7hp4kgm.mongodb.net/?retryWrites=true&w=majority
-SESSION_SECRET="Not sure what exactly this secret is needed for sessions but Stackoverflow said so :)"
+SESSION_SECRET="I do not think this matters too much I should just be able to use any string or what so ever I think?"
+SESSION_NAME="sid"
