--- a/spa-saas-mvp-server/package.json
+++ b/spa-saas-mvp-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && nodemon --ext ts build/index.js",
+    "start": "tsc && nodemon --ext ts,js,json build/index.js",
     "build": "tsc"
   },
   "keywords": [],
