--- a/spa-saas-mvp-client/package.json
+++ b/spa-saas-mvp-client/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.7"
   },
   "proxy": "http://localhost:4000"
