--- a/spa-saas-mvp-client/package.json
+++ b/spa-saas-mvp-client/package.json
@@ -21,6 +21,7 @@
     "react-date-picker": "^9.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.5",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.7"
   },
