--- a/spa-saas-mvp-client/package.json
+++ b/spa-saas-mvp-client/package.json
@@ -18,8 +18,9 @@
     "babel-plugin-macros": "^3.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-date-picker": "^9.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
@@ -51,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.10.0",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-hash-link": "^2.4.5",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.2.7"
