--- a/spa-saas-mvp-client/package.json
+++ b/spa-saas-mvp-client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "babel-plugin-macros": "^3.1.0",
+    "date-fns": "^2.29.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
