--- a/spa-saas-mvp-server/package.json
+++ b/spa-saas-mvp-server/package.json
@@ -15,6 +15,7 @@
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
